home page background video

--- a/bell/config.json
+++ b/bell/config.json
@@ -8,9 +8,9 @@
 
     "big-bg": {
       "comment": "Background player for home page",
-      "accountId": "4165107200001",
-      "bcPlayerId": "SJ8voc23",
-      "defaultVideo": "4598862275001",
+      "accountId": "4365621380001",
+      "bcPlayerId": "59579bce-1612-4607-8e8d-adc5db73766d",
+      "defaultVideo": "4527128898001",
       "autoplay": true,
       "muted": true,
       "controls": false
