adding loop setting

--- a/bell/config.json
+++ b/bell/config.json
@@ -13,7 +13,8 @@
       "defaultVideo": "4527128898001",
       "autoplay": true,
       "muted": true,
-      "controls": false
+      "controls": false,
+      "loop": true
     },
 		
 		"ad-std": {
